samples/_failures_safe/1761628959_3f3728_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4477515f.c: In function ‘main’:
./samples/SAFE/__tmp_4477515f.c:172:5: error: expected declaration or statement at end of input
  172 |     if (token_count == 0) {
      |     ^~
./samples/SAFE/__tmp_4477515f.c:172:5: error: expected declaration or statement at end of input
